--- a/rtl/win32/Makefile.fpc
+++ b/rtl/win32/Makefile.fpc
@@ -14,7 +14,8 @@ units=$(SYSTEMUNIT) systhrds objpas strings \
       sysutils classes typinfo math varutils variants \
       cpu mmx charset ucomplex getopts \
       wincrt winmouse winevent sockets printer dynlibs \
-      video mouse keyboard types comobj dateutils rtlconst sysconst winsysut
+      video mouse keyboard types comobj dateutils rtlconst sysconst winsysut \
+      strutils convutils
 
 rsts=math varutils typinfo variants classes dateutils sysconst
 
@@ -208,6 +209,14 @@ sysconst$(PPUEXT) : $(OBJPASDIR)/sysconst.pp objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUE
 
 dateutils$(PPUEXT) : $(OBJPASDIR)/dateutils.pp
         $(COMPILER) -I$(OBJPASDIR) $(OBJPASDIR)/dateutils.pp
+
+convutils$(PPUEXT) : $(OBJPASDIR)/convutils.pp
+        $(COMPILER) -I$(OBJPASDIR) $(OBJPASDIR)/convutils.pp
+
+strutils$(PPUEXT) : $(OBJPASDIR)/strutils.pp
+        $(COMPILER) -I$(OBJPASDIR) $(OBJPASDIR)/strutils.pp
+
+
 
 #
 # Other system-independent RTL Units
